Fixed Slider Sizing On Mobile

--- a/components/ui/styles.css
+++ b/components/ui/styles.css
@@ -25,18 +25,28 @@ body {
 
 .swiper {
   width: 100%;
-  padding-top: 50px;
+  padding-top: 0px;
   padding-bottom: 0px;
 }
 
 .swiper-slide {
   background-position: center;
   background-size: cover;
-  width: 300px;
-  height: 300px;
+  width: 380px;
+  height: 380px;
+  @media (max-width: 768px) {
+    width: 170px;
+    height: 170px;
+  }
 }
 
 .swiper-slide img {
   display: block;
   width: 100%;
+}
+
+.swiper-slide-active {
+  @media (max-width: 768px) {
+    margin-top: 20px;
+  }
 }
